[gd_scene load_steps=4 format=3 uid="uid://cy40c5o2mb2p8"]

[ext_resource type="Script" path="res://scripts/asteroide.gd" id="1_2ynh1"]
[ext_resource type="Texture2D" uid="uid://dvdc7oteo2ts2" path="res://sprites/Asteroide1.png" id="1_6va1f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qx3nj"]
radius = 43.0

[node name="Asteroide" type="Area2D"]
position = Vector2(-108, 94)
collision_layer = 16
collision_mask = 2
script = ExtResource("1_2ynh1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, -1)
texture = ExtResource("1_6va1f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 1)
shape = SubResource("CircleShape2D_qx3nj")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(98, -58)

[node name="TimerDelete" type="Timer" parent="."]
wait_time = 1.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimerDelete" to="." method="_on_timer_delete_timeout"]
